# MLForge

./: CMakeLists.txt  CTestTestfile.cmake  MLForgeTargets.cmake  Makefile  cmake_install.cmake  test_algorithms  test_linear_regression  test_logistic_regression
benchmarks/: benchmarks.cpp
include/ml/algorithms/: decision_tree.h  linear_regression.h  logistic_regression.h  neural_net.h
include/ml/core/: matrix.h  utils.h
include/ml/core/data_structures/: graph_structures.h  kd_tree.h  trie.h
include/ml/deployment/: api.h  model_server.h
include/ml/serialization/: serializer.h
profiling/: profiler.cpp
src/algorithms/: decision.tree.cpp  linear_regression.cpp  logistic_regression.cpp  neural_net.cpp
src/core/: utils.cpp
src/core/data_structures/: trie.cpp
src/deployment/: api.cpp  model_server.cpp
tests/: test_algorithms.cpp  test_linear_regression.cpp  test_logistic_regression.cpp
